# CanFTPApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
configs/: client.yaml  server.yaml
sources/: main.cpp
sources/CANSocketHandler/: CANSocketHandler.cpp  CANSocketHandler.hpp
sources/ClientHandler/: ClientHandler.cpp  ClientHandler.hpp
sources/ClientHanler/: ClientHandler.cpp  ClientHandler.hpp
sources/ServerHandler/: ServerHandler.cpp  ServerHandler.hpp
sources/TimeController/: TimeController.cpp  TimeController.hpp
sources/base/: AbstractEntityHandler.hpp  BaseEntityHandler.hpp
